XX.11.2011 - Release of version 0.7

    Added TinyC5.clamp() to clamp color values.
    Added Example07 (thanks to Raizor) demonstrating TinyC5.clamp().
    Added TinyC5.FAST_CLICK_EVENT which is the device specific fasted event type for clicks.
    Added QUnit tests. Jaja, I know - those tests should be written before the actual code.
    Fixed Opera color bug in Example06.
    Fixed a bunch of setter/getter bugs. Thanks to qunit testing.    

12.11.2011 - Release of version 0.6 (Interaction and smoothing)

    Added TinyC5.postUpdate() which can be overwritten to perform additional canvas processing after pixels are rendered.
    Added TinyC5.setCaptureMouse() to de/activate mouse capturing.
    Added TinyC5.isCaptureMouse() to get state of mouse capturing.
    Added captureMouse parameter for constructor.
    Added TinyC5 mouse properties for mouse capturing TinyC5.mouseX, TinyC5.mouseY, TinyC5.mouseClicked.
    Added Example06 which showcases the mouse input- and postupdate-feature.
    Added TinyC5.setSmoothing() to set image-rendering quality (speed vs quality).
    Added TinyC5.isSmoothing() for getting smoothing state.
    Added smoothing parameter for constructor.
    Fixed setFullscreen bug on init.

06.11.2011 - Release of version 0.5

    Added project to google code. Make your checkout here
    Added TinyC5.clearPixels() method for setting all pixels to a specified color.
    Added browser detection and execution browser optimized code under the hood
    Added TinyC5.color() method that created a simple property color object
    Added TinyC5.init() method which maps the constructor.
    Separated utility functions to its own object TinyC5Utils. TinyC5 core does not depend on TinyC5Utils.
    Replaced alpha params property with bgColor property
    Added title init parameter to set browser windows title.
    Renamed examples.
    Added Jim's fantastic rubber duck demo to the official examples. Thanks Jim.

02.11.2011 - Release of version 0.4
